# statiq

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
statiq/: __init__.py  abstract.py  builder.py  filters.py  page.py  plugin.py  static.py
statiq/cli/: commands.py
statiq/examples/demo/: config.py
statiq/examples/demo/pages/: [slug].py  index.py
statiq/examples/demo/pages/[category]/: [page].py  index.py
statiq/examples/demo/templates/: index.html
statiq/examples/demo/templates/[category]/: [page].html
statiq/templates/: base.html
tests/statiq/: test_filters.py  test_plugin.py
