[project]
name = "statiq"
dynamic = ["version"]
description = "Statiq is a static site generator"
readme = "README.md"
authors = [
    {name = "Marcin Giziński", email = "ooizig@gmail.com"},
    {name = "Krzysztof Koziarek", email = "krzynio@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'Jinja2 >= 3.1.2',
    'importlib_metadata; python_version < "3.8"',
    'watchdog >= 2.1.3',
]
[project.urls]
repository = "http://github.com/pystatiq/statiq"
homepage = "http://github.com/pystatiq/statiq"

[project.scripts]
statiq = "statiq.cli.commands:main"

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["statiq*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
statiq = [
    "examples/demo/config.py",
    "examples/demo/pages/*.py",
    "examples/demo/pages/*/*.py",
    "examples/demo/templates/*.html",
    "examples/demo/templates/*/*.html",
    "templates/*.html",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "statiq/_version.py"
