[metadata]
name = statiq
author = Marcin Giziński, Krzysztof Koziarek
url = http://github.com/pystatiq/statiq
author_email = ooizig@gmail.com, krzynio@gmail.com
description = Statiq is a static site generator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    Jinja2>=3.1.2

[options.package_data]
statiq =
    examples/demo/config.py
    examples/demo/pages/*.py
    examples/demo/pages/*/*.py
    examples/demo/templates/*.html
    examples/demo/templates/*/*.html
    templates/*.html

[options.entry_points]
console_scripts =
    statiq=statiq.cli.commands:main